src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>C501_Class_Site_Mobile_Number_Lookup__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(C501_Class_Site_Mobile_Number__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <inlineHelpText>Used to look up accounts on the class registration site.</inlineHelpText>
        <label>Class Site Mobile Number Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Class_Site_Mobile_Number__c</fullName>
        <label>Class Site Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>C501_Is_Active_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by 501 Commons in August 2019</description>
        <inlineHelpText>This is an active school that is listed on the registration form</inlineHelpText>
        <label>Is Active School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Next_program_start_date__c</fullName>
        <inlineHelpText>This is the date that the next class begins at this school.</inlineHelpText>
        <label>Next program start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Teacher</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Teacher)</relationshipLabel>
        <relationshipName>Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East Bay</fullName>
                </value>
                <value>
                    <fullName>South Bay</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Teacher</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Secondary Teacher)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teachers_at_Site__c</fullName>
        <formula>Primary_Teacher__r.FirstName &amp; &apos; &apos; &amp; Primary_Teacher__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teachers at Site</label>
        <type>Text</type>
    </fields>
</CustomObject>